--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-REACT_APP_API_PROFILE = https://profile.pancakeswap.com
+REACT_APP_API_PROFILE = https://profile.penguinswap.com
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_CHAIN_ID = "256"
+REACT_APP_CHAIN_ID = "43114"
 
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_1 = "https://http-mainnet.hecochain.com"
+REACT_APP_NODE_1 = "https://api.avax.network/ext/bc/C/rpc"
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_2 = "https://http-mainnet.hecochain.com"
+REACT_APP_NODE_2 = "https://api.avax.network/ext/bc/C/rpc"
 
 # 10+ nodes balanced in each region, global
-REACT_APP_NODE_3 = "https://http-mainnet.hecochain.com"
+REACT_APP_NODE_3 = "https://api.avax.network/ext/bc/C/rpc"
