--- a/.env.development
+++ b/.env.development
@@ -2,10 +2,10 @@ REACT_APP_CHAIN_ID = "43114"
 REACT_APP_GTAG = "GTM-PXLD3XW"
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_1 = "https://http-mainnet.hecochain.com"
+REACT_APP_NODE_1 = "https://api.avax.network/ext/bc/C/rpc"
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_2 = "https://http-mainnet.hecochain.com"
+REACT_APP_NODE_2 = "https://api.avax.network/ext/bc/C/rpc"
 
 # 10+ nodes balanced in each region, global
-REACT_APP_NODE_3 = "https://http-mainnet.hecochain.com"
+REACT_APP_NODE_3 = "https://api.avax.network/ext/bc/C/rpc"
